2018-01-20  Bruno Haible  <bruno@clisp.org>

	Update comments.
	* stream.d (clear_tty_input, finish_tty_output, clear_tty_output):
	Update comments after 2017-10-05 change.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	When testing, enable a couple of optimizations that are not risky.
	This avoids test failures with non-GCC compilers.
	* Makefile.devel (build-porting*-one_free_bit_heapcodes-trivialmap,
	build-porting*-kernelvoid32_heapcodes,
	build-porting*-generic64_heapcodes,
	build-porting*-typecodes-spvw_mixed_blocks-trivialmap,
	build-porting*-spvw_pure_blocks): Remove flags -DNO_FAST_FLOAT
	-DNO_FAST_DOUBLE -DNO_ALLOCA.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix crash with all non-GCC/clang compilers (regression from 2006-09-03).
	* lispbibl.d (Cclosure_last_const): Don't use sizeof of a struct that
	contains a variable-length array.
	* unix/PLATFORMS: Remove section about Sun cc.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix compilation error in C++ mode (regression from 2017-12-04).
	* modules/regexp/regexi.c (REGEXP-EXEC): Add necessary casts.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	syscalls: Make this module work with DYNAMIC_MODULES.
	Fixes bug#725.
	* modules/syscalls/calls.c (bogomips): New function, moved here from
	bogomips.c. Use 'volatile' to defeat compiler optimizations.
	* modules/syscalls/bogomips.c: Remove file.
	* modules/syscalls/Makefile.in (bogomips.o): Remove rule.
	(GENERATED): Remove bogomips.o.
	* modules/syscalls/link.sh.in (NEW_FILES): Likewise.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	clisp-link: Fix "ld: SONAME must not be empty string" warning.
	* clisp-link (add): Set 'dll' before invoking @createsharedlib@.

2018-01-18  Sam Steingold  <sds@gnu.org>

	Follow suggestions in https://stackoverflow.com/q/48283885/850781
	* modules/pari/configure.in: Accept --with-pari-datadir and search
	for pari.desc there and in other inferred locations.
	* modules/pari/Makefile.in: Substitute PARI_DATADIR and pass it to